# 1c_entrance

./: CMakeLists.txt  README.MD  main.cpp
src/: AI.cpp  AI.h  CardStack.cpp  CardStack.h  card.h  solitaire.cpp  solitaire.h
